changed the structure

--- a/ballistics.ipynb
+++ b/ballistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "# -----------------------------------------------------------------------------------------------\n",
-    "#\n",
+    "# Функция, позволяющая получить первые и вторые производные координат\n",
     "# -----------------------------------------------------------------------------------------------\n",
     "def equations(coordinate, speed):\n",
     "    x, y, z = coordinate\n",
     "    vx, vy, vz = speed\n",
     "    \n",
-    "    # вычисление производных \n",
+    "    # вычисление первых производных \n",
     "    dx_dt = vx\n",
     "    dy_dt = vy\n",
     "    dz_dt = vz\n",
@@ -97,6 +97,7 @@
     "    v = np.sqrt(vx**2 + vy**2 + vz**2)\n",
     "    # тк в задании не даны начальная масса БЦ, и другие данные, чтобы посчитать баллистический коэффициент, я приму gamma = 0,347 (нашла значения для пули)\n",
     "    gamma = 0.347 # для более точных расчетов нужно в процессе полета пересчитывать это значение (но тк начальных параметров нет, здесь я этого не делаю)\n",
+    "    \n",
     "    s = z/r_0                                     # синус широты цели\n",
     "    h = r_0 - a/(np.sqrt(1 + e_squared * s**2))   # высота БЦ над поверхностью Земли\n",
     "    rho = 10**(-1.8977 * 10**-29 * h**6 + 8.7419 * 10**-24 * h**5 - 1.4909 * 10**-18 * h**4 + 1.1591 * 10**(-13) * h**3 - 4.0740 * 10**(-9) * h**2 - 8.0463 * 10**(-6) * h + 2.0667 * 10**(-2))\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,6 @@
     "        k1 = equations(coordinate, speed)\n",
     "        q1 = speed\n",
     "        k2 = equations(coordinate + dt/2 * q1, speed + dt/2 * k1[-3:])\n",
-    "        \n",
     "        q2 = q1 + k1[-3:] * dt/2\n",
     "        k3 = equations(coordinate + dt/2 * q2, speed + dt/2 * k2[-3:])\n",
     "        q3 = q1 + k2[-3:] * dt/2\n",
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------------------------------------------------------------------\n",
-    "# Основная функция\n",
+    "# Основная функция для получения координат и их первых производных\n",
     "# -------------------------------------------------------------------------------------\n",
-    "def main():\n",
+    "def get_result():\n",
     "    t0 = 0\n",
     "    t_end = 10\n",
     "    dt = 1\n",
@@ -186,26 +186,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = main()\n",
-    "\n",
     "# -------------------------------------------------------------------------------------\n",
-    "# Вычисление высоты, скорости и ускорения\n",
+    "# Выделение из ответа координат и скоростей для последующих расчетов\n",
+    "# -------------------------------------------------------------------------------------\n",
+    "result = get_result()\n",
     "x_g = result[0]\n",
     "y_g = result[1]\n",
     "z_g = result[2]\n",
     "vx = result[3]\n",
     "vy = result[4]\n",
     "vz = result[5]\n",
-    "t = result[6]"
+    "t = result[6]\n",
+    "# -------------------------------------------------------------------------------------\n",
+    "# Вычисление высоты, скорости и ускорения\n",
+    "# -------------------------------------------------------------------------------------\n",
+    "# v = np.sqrt(vx**2 + vy**2 + vz**2)\n",
+    "# r_0 = np.sqrt(x**2 + y**2 + z**2)\n",
+    "# s = z/r_0                                     # синус широты цели\n",
+    "# result_data['r_0'] = list(map(int, r_0))\n",
+    "# h = r_0 + a/(np.sqrt(1 + e_squared * s**2)) - r  # высота БЦ над поверхностью Земли\n",
+    "\n",
+    "\n",
+    "# L = np.sqrt(x**2 + y**2)\n",
+    "# -------------------------------------------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,27 +231,18 @@
     "#     coordinates_m = np.dot(A_mg, coordinates_g - x_0)\n",
     "#     print(coordinates_m)\n",
     "#     i += 1\n",
-    "    \n",
-    "\n",
-    "# -------------------------------------------------------------------------------------\n",
-    "# v = np.sqrt(vx**2 + vy**2 + vz**2)\n",
-    "# r_0 = np.sqrt(x**2 + y**2 + z**2)\n",
-    "# s = z/r_0                                     # синус широты цели\n",
-    "# result_data['r_0'] = list(map(int, r_0))\n",
-    "# h = r_0 + a/(np.sqrt(1 + e_squared * s**2)) - r  # высота БЦ над поверхностью Земли\n",
-    "# result_data['h'] = list(map(int, h))\n",
-    "\n",
-    "# L = np.sqrt(x**2 + y**2)\n",
-    "# -------------------------------------------------------------------------------------"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация высоты от времени\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(t, h)\n",
     "# plt.xlabel('Время t')\n",
@@ -247,7 +250,18 @@
     "# plt.title('Высота от времени h(t)')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация высоты от дальности\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(L, h)\n",
     "# plt.xlabel('Дальность L')\n",
@@ -255,7 +269,18 @@
     "# plt.title('Высота от дальности L(h)')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация скорости от времени\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(t, v)\n",
     "# plt.xlabel('Время t')\n",
@@ -263,7 +288,18 @@
     "# plt.title('Скорость от времени v(t)')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация скорости от дальности\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(L, v)\n",
     "# plt.xlabel('Дальность L')\n",
@@ -271,7 +307,18 @@
     "# plt.title('Скорость от дальности v(L)')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация ускорения от времени\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(t, a)\n",
     "# plt.xlabel('Время')\n",
@@ -279,7 +326,18 @@
     "# plt.title('Ускорение от времени')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация ускорения от дальности\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# plt.figure()\n",
     "# plt.plot(x, a)\n",
     "# plt.xlabel('Дальность')\n",
@@ -287,7 +345,18 @@
     "# plt.title('Ускорение от дальности')\n",
     "# plt.grid(True)\n",
     "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------------------------\n",
     "# Визуализация траектории ракеты в 3D\n",
+    "# -------------------------------------------------------------------------------------\n",
     "# fig = plt.figure()\n",
     "# ax = fig.add_subplot(111, projection='3d')\n",
     "# ax.plot(x, y, z)\n",
@@ -301,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -448,17 +517,22 @@
        "10  3753872112767307800903680  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# -------------------------------------------------------------------------------------\n",
+    "# Составление таблицы с основными данными\n",
+    "# -------------------------------------------------------------------------------------\n",
     "result_data = pd.DataFrame()\n",
     "result_data['t'] = list(map(int, result[6]))\n",
     "result_data['x'] = list(map(int, result[0]))\n",
     "result_data['y'] = list(map(int, result[1]))\n",
     "result_data['z'] = list(map(int, result[2]))\n",
+    "# result_data['h'] = list(map(int, h))\n",
+    "\n",
     "print(\"Все расчеты проводятся в системе ГПСК(Гринвичская прямоугольная система координат). Начало ГПСК находится в центре Земли.\")    \n",
     "result_data"
    ]
