--- a/ballistics.ipynb
+++ b/ballistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,35 +28,12 @@
     "c_0 = 2.202095e10                       # коэффициент гравитационного поля Земли\n",
     "omega = 7.292115e-5                     # угловая скорость вращения Земли\n",
     "f = 298.3                               # коэффициент сжатия Земли\n",
-    "e_squared = (2*f-1)/((f - 1)**2)        # квадрат эксцентриситета Земли\n",
-    "\n",
-    "# -----------------------------------------------------------------------------------------------\n",
-    "# формулы для пересчета из ГПСК в МЗСК\n",
-    "r = a/np.sqrt(1+(1/(1-1/f)**2 - 1)*(np.sin(geo_width))**2)                # расстояние от начала ГПСК до начала МЗСК\n",
-    "H = 5                                                                     # высота объекта над поверхностью эллипсоида\n",
-    "\n",
-    "sin_geo_width = np.sin(geo_width)                                         \n",
-    "cos_geo_width = np.cos(geo_width)\n",
-    "sin_geo_longitude = np.sin(geo_longitude)\n",
-    "cos_geo_longitude = np.cos(geo_longitude)\n",
-    "\n",
-    "# матрица направляющих косинусов\n",
-    "A_mg = np.array([[-cos_geo_longitude*sin_geo_width, -sin_geo_longitude*sin_geo_width, cos_geo_width], [cos_geo_longitude*cos_geo_width, sin_geo_longitude*cos_geo_width, sin_geo_width], [-sin_geo_longitude, cos_geo_longitude, 0]])\n",
-    "\n",
-    "# геоцентрическая широта начала координат МЗСК\n",
-    "geocentric_latitude = np.arctan((1-1/f)**2 * np.tan(geo_width))\n",
-    "\n",
-    "sin_geocentric_latitude = np.sin(geocentric_latitude)\n",
-    "cos_geocentric_latitude = np.cos(geocentric_latitude)\n",
-    "\n",
-    "# координаты центра МЗСК в ГПСК\n",
-    "x_0 = np.fabs(np.array([r*cos_geocentric_latitude*cos_geo_longitude + H*cos_geo_width*cos_geo_longitude, r*cos_geocentric_latitude*sin_geo_longitude + H*cos_geo_width*cos_geo_longitude, r*sin_geocentric_latitude + H*sin_geo_width]))\n",
-    "# -----------------------------------------------------------------------------------------------"
+    "e_squared = (2*f-1)/((f - 1)**2)        # квадрат эксцентриситета Земли"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,12 +72,17 @@
     "    \n",
     "    # учет аэродинамического ускорения \n",
     "    v = np.sqrt(vx**2 + vy**2 + vz**2)\n",
-    "    # тк в задании не даны начальная масса БЦ, и другие данные, чтобы посчитать баллистический коэффициент, я приму gamma = 0,347 (нашла значения для пули)\n",
-    "    gamma = 0.347 # для более точных расчетов нужно в процессе полета пересчитывать это значение (но тк начальных параметров нет, здесь я этого не делаю)\n",
+    "    \n",
+    "    # тк в задании не даны начальная масса БЦ, и другие данные, чтобы посчитать баллистический коэффициент, \n",
+    "    # я приму gamma = 0,347 (нашла значения для пули)\n",
+    "    # для более точных расчетов нужно в процессе полета пересчитывать это значение \n",
+    "    # (но тк начальных параметров нет, здесь я этого не делаю)\n",
+    "    gamma = 0.347 \n",
     "    \n",
     "    s = z/r_0                                     # синус широты цели\n",
     "    h = r_0 - a/(np.sqrt(1 + e_squared * s**2))   # высота БЦ над поверхностью Земли\n",
-    "    rho = 10**(-1.8977 * 10**-29 * h**6 + 8.7419 * 10**-24 * h**5 - 1.4909 * 10**-18 * h**4 + 1.1591 * 10**(-13) * h**3 - 4.0740 * 10**(-9) * h**2 - 8.0463 * 10**(-6) * h + 2.0667 * 10**(-2))\n",
+    "    rho = 10**(-1.8977 * 10**-29 * h**6 + 8.7419 * 10**-24 * h**5 - 1.4909 * 10**-18 * h**4 \n",
+    "               + 1.1591 * 10**(-13) * h**3 - 4.0740 * 10**(-9) * h**2 - 8.0463 * 10**(-6) * h + 2.0667 * 10**(-2))\n",
     "    E = (-gamma * rho * v)/2\n",
     "    \n",
     "    dvx_dt += E * dx_dt\n",
@@ -112,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +146,9 @@
     "    dt = 1\n",
     "    \n",
     "    initial_coordinate = np.array([1, 1, 1])\n",
-    "    initial_speed = np.array([np.fabs(v0 * np.sin(theta) * np.cos(phi)), np.fabs(v0 * np.sin(theta) * np.sin(phi)), np.fabs(v0 * np.cos(theta))])\n",
+    "    initial_speed = np.array([np.fabs(v0 * np.sin(theta) * np.cos(phi)), \n",
+    "                              np.fabs(v0 * np.sin(theta) * np.sin(phi)), \n",
+    "                              np.fabs(v0 * np.cos(theta))])\n",
     "\n",
     "    result = runge_kutta_4(t0, t_end, dt, initial_coordinate, initial_speed)\n",
     "    \n",
@@ -186,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,26 +201,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 367,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00000000e+00 -1.87707259e+23 -3.75441874e+23 -5.63203857e+23\n",
+      " -7.50993204e+23 -9.38809913e+23 -1.12665398e+24 -1.31452540e+24\n",
+      " -1.50242418e+24 -1.69035031e+24 -1.87830378e+24]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
+      "[5863240.32572639 1876476.84144281 1662669.34230371]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Перевод координат из ГПСК в МЗСК\n",
-    "# def recalculation_gpsk_to_mhsk()\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "# формулы для пересчета из ГПСК в МЗСК\n",
+    "# ------------------------------------------------------------------------------------\n",
+    "r = a/np.sqrt(1+(1/(1-1/f)**2 - 1)*(np.sin(geo_width))**2)                # расстояние от начала ГПСК до начала МЗСК\n",
+    "H = 5                                                                     # высота объекта над поверхностью эллипсоида\n",
     "\n",
-    "# i = 0\n",
-    "# while (i < 11):\n",
-    "#     coordinates_g = np.array([x_g[i], y_g[i], z_g[i]])\n",
-    "#     print(coordinates_g)\n",
-    "#     coordinates_m = np.dot(A_mg, coordinates_g - x_0)\n",
-    "#     print(coordinates_m)\n",
-    "#     i += 1\n",
-    "    "
+    "sin_geo_width = np.sin(geo_width)                                         \n",
+    "cos_geo_width = np.cos(geo_width)\n",
+    "sin_geo_longitude = np.sin(geo_longitude)\n",
+    "cos_geo_longitude = np.cos(geo_longitude)\n",
+    "\n",
+    "# матрица направляющих косинусов\n",
+    "A_mg = np.array([[-cos_geo_longitude*sin_geo_width, -sin_geo_longitude*sin_geo_width, cos_geo_width], \n",
+    "                 [cos_geo_longitude*cos_geo_width, sin_geo_longitude*cos_geo_width, sin_geo_width], \n",
+    "                 [-sin_geo_longitude, cos_geo_longitude, 0]])\n",
+    "\n",
+    "# геоцентрическая широта начала координат МЗСК\n",
+    "geocentric_latitude = np.arctan((1-1/f)**2 * np.tan(geo_width))\n",
+    "\n",
+    "sin_geocentric_latitude = np.sin(geocentric_latitude)\n",
+    "cos_geocentric_latitude = np.cos(geocentric_latitude)\n",
+    "\n",
+    "# координаты центра МЗСК в ГПСК\n",
+    "x_0 = np.fabs(np.array([r*cos_geocentric_latitude*cos_geo_longitude + H*cos_geo_width*cos_geo_longitude, \n",
+    "                        r*cos_geocentric_latitude*sin_geo_longitude + H*cos_geo_width*cos_geo_longitude, \n",
+    "                        r*sin_geocentric_latitude + H*sin_geo_width]))\n",
+    "# -------------------------------------------------------------------------------------\n",
+    "# Перевод координат из ГПСК в МЗСК\n",
+    "# -------------------------------------------------------------------------------------\n",
+    "def recalculation_GPSK_MZSK():\n",
+    "    result = get_result()\n",
+    "    x_g = result[0]\n",
+    "    y_g = result[1]\n",
+    "    z_g = result[2]\n",
+    "    vx = result[3]\n",
+    "    vy = result[4]\n",
+    "    vz = result[5]\n",
+    "    t = result[6]\n",
+    "    print (x_g)\n",
+    "    i = 0\n",
+    "    while (i < 11):\n",
+    "        coordinates_g = np.array([x_g[i], y_g[i], z_g[i]])\n",
+    "        coordinates_m = np.dot(A_mg, coordinates_g - x_0)\n",
+    "        print(x_0)\n",
+    "        # print(coordinates_m)\n",
+    "        i += 1 \n",
+    "    \n",
+    "recalculation_GPSK_MZSK()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +559,7 @@
        "10  3753872112767307800903680  "
       ]
      },
-     "execution_count": 221,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
