did the function to recalculate coordinates from GPSK to MZSK

--- a/ballistics.ipynb
+++ b/ballistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 550,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 551,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 552,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 553,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,28 +201,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 555,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.00000000e+00 -1.87707259e+23 -3.75441874e+23 -5.63203857e+23\n",
-      " -7.50993204e+23 -9.38809913e+23 -1.12665398e+24 -1.31452540e+24\n",
-      " -1.50242418e+24 -1.69035031e+24 -1.87830378e+24]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n",
-      "[5863240.32572639 1876476.84144281 1662669.34230371]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[ 1.08122976e+04,  6.37676141e+06,  2.32827998e+00],\n",
+       "        [ 4.24151540e+23,  1.29222112e+23,  1.21533576e+23],\n",
+       "        [ 8.48307742e+23,  2.58461300e+23,  2.43032709e+23],\n",
+       "        [ 1.27246859e+24,  3.87717586e+23,  3.64497423e+23],\n",
+       "        [ 1.69663409e+24,  5.16990967e+23,  4.85927716e+23],\n",
+       "        [ 2.12080424e+24,  6.46281440e+23,  6.07323587e+23],\n",
+       "        [ 2.54497903e+24,  7.75589001e+23,  7.28685034e+23],\n",
+       "        [ 2.96915847e+24,  9.04913647e+23,  8.50012054e+23],\n",
+       "        [ 3.39334255e+24,  1.03425537e+24,  9.71304646e+23],\n",
+       "        [ 3.81753128e+24,  1.16361418e+24,  1.09256281e+24],\n",
+       "        [ 4.24172465e+24,  1.29299005e+24,  1.21378654e+24]],\n",
+       "\n",
+       "       [[-4.80920958e+00, -1.35268351e+02, -1.47239073e+02],\n",
+       "        [ 4.24153877e+23,  1.29230637e+23,  1.21516342e+23],\n",
+       "        [ 4.24158527e+23,  1.29247737e+23,  1.21481924e+23],\n",
+       "        [ 4.24163176e+23,  1.29264834e+23,  1.21447504e+23],\n",
+       "        [ 4.24167824e+23,  1.29281928e+23,  1.21413083e+23],\n",
+       "        [ 4.24172470e+23,  1.29299018e+23,  1.21378659e+23],\n",
+       "        [ 4.24177116e+23,  1.29316104e+23,  1.21344234e+23],\n",
+       "        [ 4.24181761e+23,  1.29333186e+23,  1.21309806e+23],\n",
+       "        [ 4.24186405e+23,  1.29350265e+23,  1.21275377e+23],\n",
+       "        [ 4.24191047e+23,  1.29367341e+23,  1.21240946e+23],\n",
+       "        [ 4.24195689e+23,  1.29384412e+23,  1.21206512e+23]]])"
+      ]
+     },
+     "execution_count": 555,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -264,21 +276,31 @@
     "    vy = result[4]\n",
     "    vz = result[5]\n",
     "    t = result[6]\n",
-    "    print (x_g)\n",
     "    i = 0\n",
+    "    \n",
+    "    coordinates = []\n",
+    "    speeds = []\n",
+    "    \n",
     "    while (i < 11):\n",
     "        coordinates_g = np.array([x_g[i], y_g[i], z_g[i]])\n",
     "        coordinates_m = np.dot(A_mg, coordinates_g - x_0)\n",
-    "        print(x_0)\n",
-    "        # print(coordinates_m)\n",
+    "        \n",
+    "        coordinates.append(coordinates_m)\n",
+    "        \n",
+    "        speeds_g = np.array([vx[i], vy[i], vz[i]])\n",
+    "        speeds_m = np.dot(A_mg, speeds_g)\n",
+    "        speeds.append(speeds_m)\n",
+    "        \n",
     "        i += 1 \n",
-    "    \n",
+    "        \n",
+    "    return np.array([coordinates, speeds])\n",
+    "\n",
     "recalculation_GPSK_MZSK()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 556,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 560,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 561,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 562,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 563,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +581,7 @@
        "10  3753872112767307800903680  "
       ]
      },
-     "execution_count": 375,
+     "execution_count": 563,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,6 +591,7 @@
     "# Составление таблицы с основными данными\n",
     "# -------------------------------------------------------------------------------------\n",
     "result_data = pd.DataFrame()\n",
+    "# result = recalculation_GPSK_MZSK()\n",
     "result_data['t'] = list(map(int, result[6]))\n",
     "result_data['x'] = list(map(int, result[0]))\n",
     "result_data['y'] = list(map(int, result[1]))\n",
