--- a/ballistics.ipynb
+++ b/ballistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2109,
+   "execution_count": 2332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2110,
+   "execution_count": 2333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2111,
+   "execution_count": 2334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +154,12 @@
     "\n",
     "        t += dt\n",
     "        \n",
-    "    return [np.array(coordinates), np.array(speeds)]"
+    "    return [np.array(coordinates), np.array(speeds)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2112,
+   "execution_count": 2335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
     "# -------------------------------------------------------------------------------------\n",
     "def get_result():\n",
     "    t0 = 0\n",
-    "    t_end = 10000    \n",
+    "    t_end = 10000     \n",
     "    dt = 1000\n",
     "    \n",
     "    initial_coordinate = np.array([x_0[0], x_0[1], x_0[2]])\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2113,
+   "execution_count": 2336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2114,
+   "execution_count": 2337,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "10  10000  1322410634  11947988482  1363152628"
       ]
      },
-     "execution_count": 2114,
+     "execution_count": 2337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2115,
+   "execution_count": 2338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2116,
+   "execution_count": 2339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2117,
+   "execution_count": 2340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2118,
+   "execution_count": 2341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2119,
+   "execution_count": 2342,
    "metadata": {},
    "outputs": [
     {
